syntax = "proto3";
package hello;

option go_package = "github.com/yourorg/yourprotos/gen/go/your/service/v1";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// The greeting service definition
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (google.api.http) = {
            post: "/v1/sayhello"
            body: "*"
        };
    }
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {version: "1.0"};
  external_docs: {
    url: "https://github.com/CodeHariK/Go-Experiments";
    description: "Grpc Gateway";
  }
  schemes: HTTPS;
};

service UserService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse) {
    option (google.api.http) = {
      // Route to this method from POST requests to /api/v1/users
      post: "/v1/users"
      body: "*"
      response_body: "user"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Add a user"
      description: "Add a user to the server."
      tags: "Users"
    };
  }
  rpc GetUser(GetUserRequest) returns (stream GetUserResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /api/v1/users
      get: "/v1/users/{id}"
      response_body: "user"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get user"
      description: "Get user with id"
      tags: "Users"
    };
  }
  rpc ListUsers(ListUsersRequest) returns (stream ListUsersResponse) {
    option (google.api.http) = {
      // Route to this method from GET requests to /api/v1/users
      get: "/v1/users"
      response_body: "user"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List users"
      description: "List all users on the server."
      tags: "Users"
    };
  }
}

message AddUserRequest {}

message AddUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}


message ListUsersRequest {}

message ListUsersResponse {
  User user = 1;
}

message User {
  string id = 1;
}
